# VRaytracer

./: .clang-tidy  .gitignore  BuildLinux.sh  BuildMacOS.sh  BuildWindows.bat  BuildWindows.sh  CMakeLists.txt  LICENSE  README.md
.github/workflows/: BuildLinux.yml  BuildMacOS.yml  BuildWindows.yml
CMake/: WSL.cmake
Learning/: CMakeLists.txt
Learning/RaytracingInOneWeek/: CMakeLists.txt
Learning/RaytracingInOneWeek/01-PPM/: CMakeLists.txt  main.cpp  run.sh
Learning/RaytracingInOneWeek/02-Vector3/: CMakeLists.txt  Color.h  Vector3.h  run.bat  run.sh
Learning/RaytracingInOneWeek/03-Ray/: CMakeLists.txt  Color.h  Ray.h
Learning/RaytracingInOneWeek/04-Sphere/: CMakeLists.txt  Ray.h  Vector3.h  run.sh
Learning/RaytracingInOneWeek/05-Normal/: CMakeLists.txt  Ray.h  main.cpp  run.sh
Learning/RaytracingInOneWeekend/: CMakeLists.txt
Learning/RaytracingInOneWeekend/01-PPM/: CMakeLists.txt  main.cpp  run.bat  run.sh
Learning/RaytracingInOneWeekend/02-Vector3/: CMakeLists.txt  main.cpp  run.bat
Learning/RaytracingInOneWeekend/03-Ray/: CMakeLists.txt  Ray.h  Vector3.h  run.bat  run.sh
Learning/RaytracingInOneWeekend/04-Sphere/: CMakeLists.txt  Ray.h  main.cpp  run.bat
Learning/RaytracingInOneWeekend/05-Normal/: CMakeLists.txt  Ray.h  main.cpp  run.bat
Learning/RaytracingInOneWeekend/06-Hittable/: CMakeLists.txt  Color.h  Common.h  Hittable.h  Sphere.h  main.cpp  run.bat  run.sh
Learning/RaytracingInOneWeekend/07-AA/: CMakeLists.txt  Color.h  Hittable.h  main.cpp  run.bat  run.sh
Learning/RaytracingInOneWeekend/08-Diffuse/: CMakeLists.txt  Camera.h  Color.h  Sphere.h  Vector3.h  main.cpp  run.bat  run.sh
Learning/RaytracingInOneWeekend/09-Metal/: CMakeLists.txt  Material.h  Vector3.h  main.cpp  run.bat  run.sh
Learning/RaytracingInOneWeekend/10-Dielectrics/: CMakeLists.txt  Hittable.h  HittableList.h  main.cpp  run.bat  run.sh
Learning/RaytracingInOneWeekend/11-PositionableCamera/: CMakeLists.txt  Camera.h  Material.h  Sphere.h  Vector3.h  main.cpp  run.bat  run.sh
Learning/RaytracingInOneWeekend/12-DefocusBlur/: CMakeLists.txt  Common.h  Ray.h  main.cpp  run.bat  run.sh
Learning/RaytracingInOneWeekend/13-FinalRender/: CMakeLists.txt  Camera.h  Color.h  Material.h  main.cpp  run.bat  run.sh
Learning/RaytracingTheNextWeek/: CMakeLists.txt
Learning/RaytracingTheNextWeek/01-MotionBlur/: CMakeLists.txt  MovingSphere.h  Ray.h  main.cpp  run.bat  run.sh
Learning/RaytracingTheNextWeek/02-BVH/: CMakeLists.txt  Camera.h  Hittable.h  Material.h  MovingSphere.h  Sphere.h  main.cpp  run.bat  run.sh
Learning/RaytracingTheNextWeek/03-SolidTextures/: AABB.h  CMakeLists.txt  HittableList.h  Material.h  Texture.h  Vector3.h  main.cpp  run.bat  run.sh
Learning/RaytracingTheNextWeek/04-PerlinNoise/: CMakeLists.txt  Hittable.h  Perlin.h  Texture.h  main.cpp  run.bat  run.sh
Learning/RaytracingTheNextWeek/05-ImageTextureMapping/: BVH.h  CMakeLists.txt  main.cpp  run.bat  run.sh
Learning/RaytracingTheNextWeek/06-RectanglesAndLights/: CMakeLists.txt  Common.h  main.cpp  run.bat  run.sh
Learning/RaytracingTheNextWeek/07-Instances/: AARect.h  Box.h  CMakeLists.txt  Hittable.h  Material.h  Sphere.h  Texture.h  main.cpp  run.bat  run.sh
Source/: Base.h  CMakeLists.txt  Configuration.h  Event.h  FileSystem.cpp  FileSystem.h  IRuntimeModule.h  Log.cpp  Log.h  Macro.h  Platform.h  Raytracer.cpp  Raytracer.h  RaytracerCore.h  Renderer.cpp  Renderer.h  UIModule.cpp  UIModule.h  Window.cpp  Window.h  main.cpp
Source/AppData/: imgui.ini
Source/Resources/: imgui.ini
Source/Resources/Scenes/: RandomScene.json  SimpleCornellBox.json
