set(RAYTRACING_IN_ONE_WEEKEND_BINARY_ROOT ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/RaytracingInOneWeekend)

add_subdirectory(01-PPM)
add_subdirectory(02-Vector3)
add_subdirectory(03-Ray)
add_subdirectory(04-Sphere)
add_subdirectory(05-Normal)
add_subdirectory(06-Hittable)
add_subdirectory(07-AA)
add_subdirectory(08-Diffuse)
add_subdirectory(09-Metal)
add_subdirectory(10-Dielectrics)