set(RAYTRACING_THE_NEXT_WEEK_BINARY_ROOT ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/RaytracingTheNextWeek)

add_subdirectory(01-MotionBlur)
add_subdirectory(02-BVH)
add_subdirectory(03-SolidTextures)
add_subdirectory(04-PerlinNoise)
add_subdirectory(05-ImageTextureMapping)
add_subdirectory(06-RectanglesAndLights)