set(TARGET_NAME 01-PPM)
set(TARGET_BINARY_DIR ${RAYTRACING_IN_ONE_WEEK_BINARY_ROOT}/${TARGET_NAME})

# Copy Scripts
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/run.bat DESTINATION ${TARGET_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/run.sh DESTINATION ${TARGET_BINARY_DIR})

add_executable(${TARGET_NAME} main.cpp)

# Set output path
set_target_properties(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${TARGET_BINARY_DIR})
if (MSVC)
    set_target_properties(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${TARGET_BINARY_DIR})
    set_target_properties(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${TARGET_BINARY_DIR})
endif ()